<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.pxlim.bitparse.BitFragment">


    <EditText
        android:id="@+id/editTextA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Number A"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:hint="Number B"
        android:inputType="number" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="Calculate" />

    <TextView
        android:id="@+id/textViewResultLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="Result:" />
    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
         />
</LinearLayout>
