<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_parse"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Parse" />
        <item
            android:id="@+id/nav_bit"
            android:icon="@drawable/ic_menu_manage"
            android:title="Bit" />
    </group>


</menu>
